css/projects.css
#projects {
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0;
}
#projects h2 {
  padding: 1em var(--main-padding);
  color: white;
  padding-bottom: calc(var(--main-padding) / 2);
  font-family: 'Pacifico', cursive;
  font-weight: normal;
  font-size: calc(2.5 * var(--main-font-size));
}

#projects article {
  position: relative;
  padding: 2em var(--main-padding);
  padding-bottom: calc(var(--main-padding) + 2em);
  z-index: 1;
}

/* Img and Blurb Area */
#projects article figure {
  position: relative;
  text-align: center;
  padding-bottom: 0.5em;
  font-style: italic;
}
#projects article img {
  width: 100%;
  border-radius: 0.5vmin;
  border: max(1vmin, 5px) solid var(--grey);
}
/* reposition featured-badges for alternating layout */
#projects article:nth-of-type(2n) .featured-badge {
  right: auto; left: 0;
  transform: translate(-15%, -15%) rotate(-5deg);
}

/* Title and Description Area */
#projects article div:last-child {
  padding-top: 1em;
  border-top: max(1vmin, 5px) dotted var(--grey);
}
#projects article p { margin: 1em 0; }


/* Alternating Layout */

#projects article:nth-of-type(2n) { color: white; }
/* override btn text default colors */
#projects article:nth-of-type(2n) .btn-text { color: white; }
#projects article:nth-of-type(2n) .btn-text .icon { border-color: white; }
#projects article:nth-of-type(2n) .btn-text .icon::before { background: white; }
#projects article:nth-of-type(2n) .btn-text .icon::after { border-top-color: white; }
#projects article:nth-of-type(2n) div:last-child { border-top-color: var(--grey-light); }
/* keep btn text hover colors */
#projects article:nth-of-type(2n) .btn-text:hover { color: var(--blue); }
#projects article:nth-of-type(2n) .btn-text:hover .icon { border-color: var(--blue); }
#projects article:nth-of-type(2n) .btn-text:hover .icon::before { background: var(--blue); }
#projects article:nth-of-type(2n) .btn-text:hover .icon::after { border-top-color: var(--blue); }

#projects article:nth-of-type(2n+1) {
  margin: calc(var(--main-padding) + 2em) 0;
  background: var(--grey-light);
}
#projects article:nth-of-type(2n+1)::before {
  content: '';
  position: absolute;
  left: 0; top: 1px;
  width: 100%; height: var(--main-padding);
  transform: translateY(-100%);
  background: var(--grey-light);
  clip-path: polygon(0 0, 100% var(--main-padding), 0 100%);
}
#projects article:nth-of-type(2n+1)::after {
  content: '';
  position: absolute;
  left: 0; bottom: 1px;
  width: 100%; height: var(--main-padding);
  transform: translateY(100%);
  background: var(--grey-light);
  clip-path: polygon(0 0, 100% 0, 0 var(--main-padding));
}
#projects .btn-text { margin-bottom: 0.5em; }

@media (min-aspect-ratio: 1/1) {
  /* two column layout */
  #projects article { display: flex; }
  #projects article div:last-child {
    border: 0;
    padding: 0;
  }
  /* alternating layout */
  #projects article:nth-of-type(2n+1) {
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  #projects article:nth-of-type(2n+1) div:last-child { margin-right: 2em; }
  #projects article:nth-of-type(2n) figure { margin-right: 2em; }
  /* img constraints */
  #projects article img {
    width: min(45vw, 800px);
    display: block;
  }
  /* override btn text defaults */
  #projects .btn-text {
    display: inline-flex;
    margin-right: 1em;
    margin-bottom: 0;
  }
}

